Swap URI for URL